[package]
name = "article-master"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
serde = "1.0.188"
serde_json = "1.0.106"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres" ] }

